--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Landstrykere vandrer rundt.</h1>
-				<p>Det er det. <a href="/about">Read more about my life...</a></p>
+				<p>Det er det.</p>
+				<hr>
+				<div align=center><img="bilder/bilibin_search4.jpg"></div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
