--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         		<h1>Landstrykere vandrer rundt.</h1>
 				<p>Det er det.</p>
 				<hr>
-				<div align=center><img="bilder/bilibin_search4.jpg"></div>
+				<div align=center><img="https://raw.githubusercontent.com/landstrykere/landstrykere.github.io/master/bilder/bilibin_search4.jpg"></div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
